--- a/sea_battle/sea_battle.vcxproj
+++ b/sea_battle/sea_battle.vcxproj
@@ -138,7 +138,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="src\Cell.cpp" />
     <ClCompile Include="src\Field.cpp" />
-    <ClCompile Include="src\Shup.cpp" />
+    <ClCompile Include="src\Ship.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
