--- a/sea_battle/sea_battle.vcxproj
+++ b/sea_battle/sea_battle.vcxproj
@@ -130,14 +130,17 @@
     <ClInclude Include="include\BotPlayer.hpp" />
     <ClInclude Include="include\Cell.hpp" />
     <ClInclude Include="include\Field.hpp" />
-    <ClInclude Include="include\IPlayer.hpp" />
+    <ClInclude Include="include\Game.hpp" />
     <ClInclude Include="include\Player.hpp" />
     <ClInclude Include="include\Ship.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="src\BotPLayer.cpp" />
     <ClCompile Include="src\Cell.cpp" />
     <ClCompile Include="src\Field.cpp" />
+    <ClCompile Include="src\Game.cpp" />
+    <ClCompile Include="src\Player.cpp" />
     <ClCompile Include="src\Ship.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
